--- a/ChristinaWebsite/index.html
+++ b/ChristinaWebsite/index.html
@@ -27,10 +27,10 @@
     </div>
 
     <div class="content">
-      <h1 class="quote">“When a flower doesn’t bloom, you fix the environment in which it grows… not the flower”</h1>
+      <h1 class="quote">“When you change the way you look at things, the things you look at change”</h1>
       <br>
       <br>  
-      <p>-A. Den Heijer</p>
+      <p>-Max Planck</p>
       <a href="#about" class="btn"><i class="fas fa-chevron-right"></i>Read More</a>
     </div>
   </header>
@@ -41,6 +41,16 @@
         <i class="fas fa-university fa-2x"></i>
         <div>
           <h3>Therapy</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, voluptatibus!</p>
+        </div>
+        <i class="fas fa-hands-helping fa-2x"></i>
+        <div>
+          <h3>Coaching</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, voluptatibus!</p>
+        </div>
+        <i class="fas fa-praying-hands fa-2x"></i>
+        <div>
+          <h3>Meditation</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, voluptatibus!</p>
         </div>
       </div>
