--- a/ChristinaWebsite/index.html
+++ b/ChristinaWebsite/index.html
@@ -31,27 +31,54 @@
       <br>
       <br>  
       <p>-Max Planck</p>
-      <a href="#about" class="btn"><i class="fas fa-chevron-right"></i>Read More</a>
+      <a href="#about" class="btn"><i class="fas fa-chevron-right"></i> Read More</a>
     </div>
   </header>
 
   <main>
+    <!-- About:Icons -->
     <section id="about" class="icons bg-light">
       <div class="flex-items">
-        <i class="fas fa-university fa-2x"></i>
         <div>
-          <h3>Therapy</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, voluptatibus!</p>
+          <i class="fas fa-pencil-alt fa-2x"></i>
+          <div>
+            <h3>Therapy</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, voluptatibus!</p>
+          </div>  
         </div>
-        <i class="fas fa-hands-helping fa-2x"></i>
         <div>
-          <h3>Coaching</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, voluptatibus!</p>
+          <i class="fas fa-hands-helping fa-2x"></i>
+          <div>
+            <h3>Coaching</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, voluptatibus!</p>
+          </div>  
         </div>
-        <i class="fas fa-praying-hands fa-2x"></i>
         <div>
-          <h3>Meditation</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, voluptatibus!</p>
+          <i class="fas fa-praying-hands fa-2x"></i>
+          <div>
+            <h3>Meditation</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, voluptatibus!</p>
+          </div>  
+        </div>
+      </div>
+    </section>
+    <!-- About:Solutions -->
+    <section class="solutions flex-columns">
+      <div class="row">
+        <div class="column">
+          <div class="column-1">
+            <img src="img/home/christian-joudrey-_GEx2CfrAOk-unsplash.jpg" alt="">
+          </div>
+        <div class="column">
+          <div class="column-2">
+            <h4>What are you looking for</h4>
+            <h2>I provide support in multiple modalities</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam quaerat culpa ipsum similique provident enim in rem deleniti dolor minima cum accusamus sapiente vero, expedita ea optio harum ipsam doloremque?</p>
+            <a href="" class="btn btn-outline">
+              <i class="fas fa-chevron"></i>
+              Read More
+            </a> 
+          </div>
         </div>
       </div>
     </section>
