--- a/ChristinaWebsite/index.html
+++ b/ChristinaWebsite/index.html
@@ -31,7 +31,7 @@
       <br>
       <br>  
       <p>-Max Planck</p>
-      <a href="#about" class="btn"><i class="fas fa-chevron-right"></i> Read More</a>
+      <a href="#about" class="btn btn-outline"><i class="fas fa-chevron-right"></i> Read More</a>
     </div>
   </header>
 
@@ -67,14 +67,63 @@
       <div class="row">
         <div class="column">
           <div class="column-1">
-            <img src="img/home/christian-joudrey-_GEx2CfrAOk-unsplash.jpg" alt="">
+            <img src="img/home/sebastian-herrmann-UN5Y-wlvgvM-unsplash.jpg" alt="">
           </div>
+        </div>
         <div class="column">
-          <div class="column-2">
+          <div class="column-2 bg-primary">
             <h4>What are you looking for</h4>
             <h2>I provide support in multiple modalities</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam quaerat culpa ipsum similique provident enim in rem deleniti dolor minima cum accusamus sapiente vero, expedita ea optio harum ipsam doloremque?</p>
-            <a href="" class="btn btn-outline">
+            <a href="#about" class="btn btn-outline">
+              <i class="fas fa-chevron"></i>
+              Read More
+            </a> 
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Cases -->
+    <section id="cases" class="cases flex-grid section-padding">
+      <header class="section-header">
+        <h4>This is what I do</h4>
+        <h2>Cases examples</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque, ea!</p>
+      </header>
+      <div class="row">
+        <div class="column">
+          <img src="img/cases/counsil1.jpg" alt="">
+          <img src="img/cases/counsil5.jpg" alt="">
+        </div>
+        <div class="column">
+          <img src="img/cases/counsil4.jpg" alt="">
+          <img src="img/cases/counsil7.jpg" alt="">
+        </div>
+        <div class="column">
+          <img src="img/cases/counsil11.jpg" alt="">
+          <img src="img/cases/counsil6.jpg" alt="">
+        </div>
+        <div class="column">
+          <img src="img/cases/counsil10.jpg" alt="">
+          <img src="img/cases/counsil8.jpg" alt="">
+        </div>
+      </div>
+    </section>
+
+    <section id="blog" class="blog flex-columns">
+      <div class="row">
+        <div class="column">
+          <div class="column-1">
+            <img src="img/home/sebastian-herrmann-UN5Y-wlvgvM-unsplash.jpg" alt="">
+          </div>
+        </div>
+        <div class="column">
+          <div class="column-2 bg-primary">
+            <h4>What are you looking for</h4>
+            <h2>I provide support in multiple modalities</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam quaerat culpa ipsum similique provident enim in rem deleniti dolor minima cum accusamus sapiente vero, expedita ea optio harum ipsam doloremque?</p>
+            <a href="#about" class="btn btn-outline">
               <i class="fas fa-chevron"></i>
               Read More
             </a> 
