--- a/ChristinaWebsite/index.html
+++ b/ChristinaWebsite/index.html
@@ -93,39 +93,39 @@
       </header>
       <div class="row">
         <div class="column">
-          <img src="img/cases/counsil1.jpg" alt="">
+          <img src="img/cases/counsil13.jpg" alt="">
           <img src="img/cases/counsil5.jpg" alt="">
         </div>
         <div class="column">
-          <img src="img/cases/counsil4.jpg" alt="">
           <img src="img/cases/counsil7.jpg" alt="">
+          <img src="img/cases/counsil4.jpg" alt="">
         </div>
         <div class="column">
-          <img src="img/cases/counsil11.jpg" alt="">
-          <img src="img/cases/counsil6.jpg" alt="">
+          <img src="img/home/shashi-ch-FjYwhowyp6k-unsplash.jpg" alt="">
+          <img src="img/cases/counsil8.jpg" alt="">
         </div>
         <div class="column">
           <img src="img/cases/counsil10.jpg" alt="">
-          <img src="img/cases/counsil8.jpg" alt="">
+          <img src="img/cases/counsil6.jpg" alt="">
         </div>
       </div>
     </section>
 
-    <section id="blog" class="blog flex-columns">
+    <section id="blog" class="blog flex-columns flex-reverse">
       <div class="row">
         <div class="column">
           <div class="column-1">
-            <img src="img/home/sebastian-herrmann-UN5Y-wlvgvM-unsplash.jpg" alt="">
+            <img src="img/blog/blog1.jpg" alt="">
           </div>
         </div>
         <div class="column">
-          <div class="column-2 bg-primary">
-            <h4>What are you looking for</h4>
-            <h2>I provide support in multiple modalities</h2>
+          <div class="column-2 bg-secondary">
+            <h4>May 16, 2021</h4>
+            <h2>Blog Post One</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam quaerat culpa ipsum similique provident enim in rem deleniti dolor minima cum accusamus sapiente vero, expedita ea optio harum ipsam doloremque?</p>
-            <a href="#about" class="btn btn-outline">
+            <a href="#Blog" class="btn btn-outline">
               <i class="fas fa-chevron"></i>
-              Read More
+              Read My Blog
             </a> 
           </div>
         </div>
