--- a/ChristinaWebsite/index.html
+++ b/ChristinaWebsite/index.html
@@ -67,7 +67,7 @@
       <div class="row">
         <div class="column">
           <div class="column-1">
-            <img src="img/home/sebastian-herrmann-UN5Y-wlvgvM-unsplash.jpg" alt="">
+            <img src="img/blog/blog17.1.jpg" alt="">
           </div>
         </div>
         <div class="column">
@@ -87,9 +87,9 @@
     <!-- Cases -->
     <section id="cases" class="cases flex-grid section-padding">
       <header class="section-header">
-        <h4>This is what I do</h4>
-        <h2>Cases examples</h2>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque, ea!</p>
+        <h4>Resources for you</h4>
+        <h2>Family Life Hacks</h2>
+        <p> “Be not afraid of growing slowly; be afraid only of standing still.”"<br><br>-Chinese Proverb</p>
       </header>
       <div class="row">
         <div class="column">
@@ -125,8 +125,57 @@
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam quaerat culpa ipsum similique provident enim in rem deleniti dolor minima cum accusamus sapiente vero, expedita ea optio harum ipsam doloremque?</p>
             <a href="#Blog" class="btn btn-outline">
               <i class="fas fa-chevron"></i>
-              Read My Blog
+              Read My Post
             </a> 
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- States -->
+    <section id="states" class="states section-padding">
+      <header class="section-header">
+        <h4>Where I practice</h4>
+        <h2>Telehealth Locations</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque, ea!</p>
+      </header>
+        <div class="flex-items">
+          <div>
+            <img src="img/team/tx2.jpg" alt="TX">
+            <h4>Texas</h4>
+          </div>
+          <div>
+            <img src="img/team/ca.jpg" alt="CA">
+            <h4>California</h4>
+          </div>
+        </div>
+    </section>
+
+    <!-- Contact -->
+    <section id="class" class="contact flex-columns">
+      <div class="row">
+        <div class="column">
+          <div class="column-1">
+            <img src="img/blog/blog11.jpg" alt="">
+          </div>
+        </div>
+        <div class="column">
+          <div class="column-2 bg-light">
+            <form action="" class="callback-form">
+              <div class="form-control">
+                <label for="name"></label>
+                <input type="text" name="name" id="name" placeholder="First Last">Name
+              </div>
+              <div class="form-control">
+                <label for="email"></label>
+                <input type="email" name="email" id="email" placeholder="Enter Email">Email
+              </div>
+              <div class="form-control">
+                <label for="phone"></label>
+                <input type="text" name="phone" id="name" placeholder="Enter Phone">Phone Number
+              </div>
+              <input type="submit" value="send" id="submit" class="btn">
+            </form>
           </div>
         </div>
       </div>
