--- a/ChristinaWebsite/index.html
+++ b/ChristinaWebsite/index.html
@@ -141,7 +141,7 @@
       </header>
         <div class="flex-items">
           <div>
-            <img src="img/team/tx2.jpg" alt="TX">
+            <img src="img/home/longhorn.jpg" alt="TX">
             <h4>Texas</h4>
           </div>
           <div>
@@ -156,7 +156,7 @@
       <div class="row">
         <div class="column">
           <div class="column-1">
-            <img src="img/blog/blog11.jpg" alt="">
+            <img src="img/home/contact4.jpg" alt="">
           </div>
         </div>
         <div class="column">
