--- a/ChristinaWebsite/index.html
+++ b/ChristinaWebsite/index.html
@@ -156,11 +156,12 @@
       <div class="row">
         <div class="column">
           <div class="column-1">
-            <img src="img/home/contact4.jpg" alt="">
+            <img src="img/team/Callback.png" alt="">
           </div>
         </div>
         <div class="column">
-          <div class="column-2 bg-light">
+          <div class="column-2 bg-primary">
+            <h2>Request Callback</h2>
             <form action="" class="callback-form">
               <div class="form-control">
                 <label for="name"></label>
@@ -172,9 +173,9 @@
               </div>
               <div class="form-control">
                 <label for="phone"></label>
-                <input type="text" name="phone" id="name" placeholder="Enter Phone">Phone Number
+                <input type="text" name="phone" id="phone" placeholder="Enter Phone">Phone Number
               </div>
-              <input type="submit" value="send" id="submit" class="btn">
+              <input type="submit" value="Send" id="submit" class="btn btn-outline">
             </form>
           </div>
         </div>
