--- a/ChristinaWebsite/index.html
+++ b/ChristinaWebsite/index.html
@@ -161,7 +161,7 @@
         </div>
         <div class="column">
           <div class="column-2 bg-primary">
-            <h2>Request Callback</h2>
+            <h2>Request Consult</h2>
             <form action="" class="callback-form">
               <div class="form-control">
                 <label for="name"></label>
@@ -182,6 +182,14 @@
       </div>
     </section>
   </main>
-  
+  <!-- Footer -->
+  <footer class="footer bg-dark">
+    <div class="social">
+      <a href="a"><i class="fab fa-facebook fa-2x"></i></a>
+      <a href="a"><i class="fab fa-linkedin fa-2x"></i></a>
+      <a href="a"><i class="fab fa-instagram fa-2x"></i></a>
+    </div>
+    <p>Copyright &copy; 2020- Christina Ramirez MFT PLLC</p>
+  </footer>
 </body>
 </html>
