--- a/ChristinaWebsite/index.html
+++ b/ChristinaWebsite/index.html
@@ -76,7 +76,7 @@
             <h2>I provide support in multiple modalities</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam quaerat culpa ipsum similique provident enim in rem deleniti dolor minima cum accusamus sapiente vero, expedita ea optio harum ipsam doloremque?</p>
             <a href="#about" class="btn btn-outline">
-              <i class="fas fa-chevron"></i>
+              <i class="fas fa-chevron-right"></i>
               Read More
             </a> 
           </div>
@@ -124,7 +124,7 @@
             <h2>Blog Post One</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam quaerat culpa ipsum similique provident enim in rem deleniti dolor minima cum accusamus sapiente vero, expedita ea optio harum ipsam doloremque?</p>
             <a href="#Blog" class="btn btn-outline">
-              <i class="fas fa-chevron"></i>
+              <i class="fas fa-chevron-right"></i>
               Read My Post
             </a> 
           </div>
