--- a/ChristinaWebsite/index.html
+++ b/ChristinaWebsite/index.html
@@ -12,8 +12,8 @@
   <header class="hero">
     <div id="navbar" class="navbar">
       <h1 class="container">
-        <img class="img-1" src="img/home/logo.png" alt=""></img>
-        <div class="company-title"><span class="text-primary">Christina Ramirez</span><span style="font-size: 85%;">  MFT PLLC</span></div>
+        <img class="img-1" src="img/home/logowh.png" alt=""></img>
+        <div class="company-title"><span class="text-primary">Christina Ramirez</span><span class="company-title-2" style="font-size: 50%;"> MFT</span></div>
       </h1>
       <nav>
         <ul>
