--- a/ChristinaWebsite/index.html
+++ b/ChristinaWebsite/index.html
@@ -12,14 +12,15 @@
   <header class="hero">
     <div id="navbar" class="navbar">
       <h1 class="container">
-        <img class="img-1" src="img/home/logowh.png" alt=""></img>
-        <div class="company-title"><span class="text-primary">Christina Ramirez</span><span class="company-title-2" style="font-size: 50%;"> MFT</span></div>
+        <img class="img-1" src="img/home/logolotus7.png" alt=""></img>
+        <div class="company-title"><span class="text-primary">Christina Ramirez</span><span class="company-title-2" style="font-size: 75%;"> MFT</span></div>
       </h1>
       <nav>
         <ul>
           <li><a href="#home">Home</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="#specialties">Specialties</a></li>
+          <li><a href="#modalities">Modalities</a></li>
+          <li><a href="#locations">Locations</a></li>
           <li><a href="#blog">Blog</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
@@ -85,7 +86,7 @@
     </section>
 
     <!-- Cases -->
-    <section id="cases" class="cases flex-grid section-padding">
+    <section id="modalities" class="modalities flex-grid section-padding">
       <header class="section-header">
         <h4>Resources for you</h4>
         <h2>Family Life Hacks</h2>
@@ -123,7 +124,7 @@
             <h4>May 16, 2021</h4>
             <h2>Blog Post One</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam quaerat culpa ipsum similique provident enim in rem deleniti dolor minima cum accusamus sapiente vero, expedita ea optio harum ipsam doloremque?</p>
-            <a href="#Blog" class="btn btn-outline">
+            <a href="blog.html" class="btn btn-outline">
               <i class="fas fa-chevron-right"></i>
               Read My Post
             </a> 
@@ -133,7 +134,7 @@
     </section>
 
     <!-- States -->
-    <section id="states" class="states section-padding">
+    <section id="locations" class="locations section-padding">
       <header class="section-header">
         <h4>Where I practice</h4>
         <h2>Telehealth Locations</h2>
@@ -152,7 +153,7 @@
     </section>
 
     <!-- Contact -->
-    <section id="class" class="contact flex-columns">
+    <section id="contact" class="contact flex-columns">
       <div class="row">
         <div class="column">
           <div class="column-1">
