--- a/ChristinaWebsite/blog.html
+++ b/ChristinaWebsite/blog.html
@@ -28,7 +28,7 @@
     </div>
 
     <div class="content">
-      <h1 class="quote">Blog</h1>
+      <h1 class="quote text-light btn btn-outline">Blog</h1>
     </div>
   </header>
 
@@ -37,7 +37,7 @@
       <div class="row">
         <div class="column">
           <div class="column-1">
-            <img src="img/home/john-towner-3Kv48NS4WUU-unsplash.jpg" alt="">
+            <img src="img/blog/blog1.jpg" alt="">
           </div>
         </div>
         <div class="column">
@@ -57,7 +57,7 @@
       </div>
     </article>
 
-    <article class="flex-columns">
+    <article class="flex-columns flex-reverse">
       <div class="row">
         <div class="column">
           <div class="column-1">
@@ -65,14 +65,38 @@
           </div>
         </div>
         <div class="column">
-          <div class="column-2 bg-dark">
+          <div class="column-2 bg-light">
             <h4>Blog Post Two</h4>
             <p class="meta">
               <i class="fas fa-user"></i> Posted by <strong>Joe Writer</strong>| May 20 2021
             </p>
             <h2>How to Blah Blah Blah</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam quaerat culpa ipsum similique provident enim in rem deleniti dolor minima cum accusamus sapiente vero, expedita ea optio harum ipsam doloremque?</p>
-            <a href="#about" class="btn btn-outline">
+            <a href="#about" class="btn-2  btn-outline-2 btn-light">
+              <i class="fas fa-chevron-right"></i>
+              Read More
+            </a> 
+          </div>
+        </div>
+      </div>
+    </article>
+
+    <article class="flex-columns">
+      <div class="row">
+        <div class="column">
+          <div class="column-1">
+            <img src="img/cases/counsil12.jpg" alt="">
+          </div>
+        </div>
+        <div class="column">
+          <div class="column-2 bg-light">
+            <h4>Blog Post Three</h4>
+            <p class="meta">
+              <i class="fas fa-user"></i> Posted by <strong>Jane Writer</strong>| May 20 2021
+            </p>
+            <h2>How to Blah Blah Blah</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam quaerat culpa ipsum similique provident enim in rem deleniti dolor minima cum accusamus sapiente vero, expedita ea optio harum ipsam doloremque?</p>
+            <a href="#about" class="btn-2 btn-outline-2 btn-light">
               <i class="fas fa-chevron-right"></i>
               Read More
             </a> 
