Ipad and mobile tweaks

--- a/ChristinaWebsite/blog.html
+++ b/ChristinaWebsite/blog.html
@@ -11,9 +11,8 @@
 <body id="home">
   <header class="hero blog">
     <div id="navbar" class="navbar">
-      <h1 class="container">
-        <img class="img-1" src="img/home/logolotus7.png" alt=""></img>
-        <div class="company-title"><span class="text-primary">Christina Ramirez</span><span class="company-title-2" style="font-size: 75%;"> MFT</span></div>
+      <h1 class="container">  
+        <span class="text-primary"><img class="img-1" src="img/home/logolotus7.png" alt=""></img>Christina Ramirez</span><span class="company-title-2" style="font-size: 75%;"> MFT</span>
       </h1>
       <nav>
         <ul>
@@ -37,7 +36,7 @@
       <div class="row">
         <div class="column">
           <div class="column-1">
-            <img src="img/blog/blog1.jpg" alt="">
+            <img src="img/home/blog2.jpg" alt="">
           </div>
         </div>
         <div class="column">
@@ -48,7 +47,7 @@
             </p>
             <h2>How to Blah Blah Blah</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam quaerat culpa ipsum similique provident enim in rem deleniti dolor minima cum accusamus sapiente vero, expedita ea optio harum ipsam doloremque?</p>
-            <a href="#about" class="btn-2 btn-outline-2 btn-light">
+            <a href="post.html" class="btn-2 btn-outline-2 btn-light">
               <i class="fas fa-chevron-right"></i>
               Read More
             </a> 
@@ -61,7 +60,7 @@
       <div class="row">
         <div class="column">
           <div class="column-1">
-            <img src="img/home/danielle-macinnes-IuLgi9PWETU-unsplash.jpg" alt="">
+            <img src="img/cases/counsil12.jpg" alt="">
           </div>
         </div>
         <div class="column">
@@ -72,7 +71,7 @@
             </p>
             <h2>How to Blah Blah Blah</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam quaerat culpa ipsum similique provident enim in rem deleniti dolor minima cum accusamus sapiente vero, expedita ea optio harum ipsam doloremque?</p>
-            <a href="#about" class="btn-2  btn-outline-2 btn-light">
+            <a href="post.html" class="btn-2  btn-outline-2 btn-light">
               <i class="fas fa-chevron-right"></i>
               Read More
             </a> 
@@ -85,7 +84,7 @@
       <div class="row">
         <div class="column">
           <div class="column-1">
-            <img src="img/cases/counsil12.jpg" alt="">
+            <img src="img/home/danielle-macinnes-IuLgi9PWETU-unsplash.jpg" alt="">
           </div>
         </div>
         <div class="column">
@@ -96,7 +95,7 @@
             </p>
             <h2>How to Blah Blah Blah</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam quaerat culpa ipsum similique provident enim in rem deleniti dolor minima cum accusamus sapiente vero, expedita ea optio harum ipsam doloremque?</p>
-            <a href="#about" class="btn-2 btn-outline-2 btn-light">
+            <a href="post.html" class="btn-2 btn-outline-2 btn-light">
               <i class="fas fa-chevron-right"></i>
               Read More
             </a> 
