--- a/ChristinaWebsite/index.html
+++ b/ChristinaWebsite/index.html
@@ -12,8 +12,8 @@
   <header class="hero">
     <div id="navbar" class="navbar">
       <h1 class="container">
-        <img class="img-1" src="img/home/logolotus7.png" alt=""></img>
-        <div class="company-title"><span class="text-primary">Christina Ramirez</span><span class="company-title-2" style="font-size: 75%;"> MFT</span></div>
+        <div class="container-title"><span class="text-primary company-title"><img class="img-1" src="img/home/logolotus7.png" alt=""></img>Christina Ramirez </span><span class="company-title-2"> MFT</span> 
+        </div>   
       </h1>
       <nav>
         <ul>
@@ -85,7 +85,7 @@
       </div>
     </section>
 
-    <!-- Cases -->
+    <!-- Modalities -->
     <section id="modalities" class="modalities flex-grid section-padding">
       <header class="section-header">
         <h4>Resources for you</h4>
@@ -116,7 +116,7 @@
       <div class="row">
         <div class="column">
           <div class="column-1">
-            <img src="img/blog/blog1.jpg" alt="">
+            <img src="img/home/blog2.jpg" alt="">
           </div>
         </div>
         <div class="column">
