--- a/ChristinaWebsite/index.html
+++ b/ChristinaWebsite/index.html
@@ -192,5 +192,21 @@
     </div>
     <p>Copyright &copy; 2020- Christina Ramirez MFT PLLC</p>
   </footer>
+
+  <script>
+    const navbar = document.getElementById('navbar');
+    let scrolled = false;
+    
+    window.onscroll = funtion(); { 
+      if(window.pageYOffset > 70) {
+        navbar.classlist.remove('top');
+        if(!scrolled) {
+          navbar.style.transform = 'TranslateY(-70px)';
+        }
+      } else {
+        navbar.classlist.add('top');
+      }
+    };
+  </script>
 </body>
 </html>
