--- a/ChristinaWebsite/index.html
+++ b/ChristinaWebsite/index.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+  <link rel="stylesheet" href="css/lightbox.min.css">
   <link rel="stylesheet" href="css/utilities.css">
   <link rel="stylesheet" href="css/style.css">
   <title>Welcome to Christina Ramirez MFT, PLLC</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
+  <script src="https://kit.fontawesome.com/235bfa5e72.js" crossorigin="anonymous">
+  </script>
 </head>
+
 <body id="home">
   <header class="hero">
-    <div id="navbar" class="navbar">
+    <div id="navbar" class="navbar top">
       <h1 class="container">
-        <div class="container-title"><span class="text-primary company-title"><img class="img-1" src="img/home/logolotus7.png" alt=""></img>Christina Ramirez </span><span class="company-title-2"> MFT</span> 
-        </div>   
+        <div class="container-title"><span class="text-primary            company-title"><img class="img-1"
+        src="img/home/logolotus7.png" alt=""></img>Christina Ramirez </span><span class="company-title-2">
+        MFT</span>
+        </div>
       </h1>
       <nav>
         <ul>
@@ -30,7 +37,7 @@
     <div class="content">
       <h1 class="quote">“When you change the way you look at things, the things you look at change”</h1>
       <br>
-      <br>  
+      <br>
       <p>-Max Planck</p>
       <a href="#about" class="btn btn-outline"><i class="fas fa-chevron-right"></i> Read More</a>
     </div>
@@ -45,21 +52,21 @@
           <div>
             <h3>Therapy</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, voluptatibus!</p>
-          </div>  
+          </div>
         </div>
         <div>
           <i class="fas fa-hands-helping fa-2x"></i>
           <div>
             <h3>Coaching</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, voluptatibus!</p>
-          </div>  
+          </div>
         </div>
         <div>
           <i class="fas fa-praying-hands fa-2x"></i>
           <div>
             <h3>Meditation</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, voluptatibus!</p>
-          </div>  
+          </div>
         </div>
       </div>
     </section>
@@ -75,11 +82,13 @@
           <div class="column-2 bg-primary">
             <h4>What are you looking for</h4>
             <h2>I provide support in multiple modalities</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam quaerat culpa ipsum similique provident enim in rem deleniti dolor minima cum accusamus sapiente vero, expedita ea optio harum ipsam doloremque?</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam  quaerat culpa ipsum similique provident
+              enim in rem deleniti dolor minima cum accusamus sapiente vero, expedita ea optio harum ipsam doloremque?
+            </p>
             <a href="#about" class="btn btn-outline">
               <i class="fas fa-chevron-right"></i>
               Read More
-            </a> 
+            </a>
           </div>
         </div>
       </div>
@@ -94,20 +103,52 @@
       </header>
       <div class="row">
         <div class="column">
+          <a 
+          href="img/cases/counsil13.jpg" data-lightbox="cases"
+          data-title="Lorem ipsum dolor, sit amet consectetur adipisicing elit.">
           <img src="img/cases/counsil13.jpg" alt="">
+          </a>
+          <a 
+          href="img/cases/counsil5.jpg" data-lightbox="cases"
+          data-title="Lorem ipsum dolor, sit amet consectetur adipisicing elit.">
           <img src="img/cases/counsil5.jpg" alt="">
+          </a>
         </div>
         <div class="column">
+          <a 
+          href="img/cases/counsil7.jpg" data-lightbox="cases"
+          data-title="Lorem ipsum dolor, sit amet consectetur adipisicing elit.">
           <img src="img/cases/counsil7.jpg" alt="">
+          </a>
+          <a 
+          href="img/cases/counsil4.jpg" data-lightbox="cases"
+          data-title="Lorem ipsum dolor, sit amet consectetur adipisicing elit.">
           <img src="img/cases/counsil4.jpg" alt="">
+          </a>
         </div>
         <div class="column">
+          <a 
+          href="img/home/shashi-ch-FjYwhowyp6k-unsplash.jpg" data-lightbox="cases"
+          data-title="Lorem ipsum dolor, sit amet consectetur adipisicing elit.">
           <img src="img/home/shashi-ch-FjYwhowyp6k-unsplash.jpg" alt="">
+          </a>
+          <a 
+          href="img/cases/counsil8.jpg" data-lightbox="cases"
+          data-title="Lorem ipsum dolor, sit amet consectetur adipisicing elit.">
           <img src="img/cases/counsil8.jpg" alt="">
+          </a>
         </div>
         <div class="column">
+          <a 
+          href="img/cases/counsil10.jpg" data-lightbox="cases"
+          data-title="Lorem ipsum dolor, sit amet consectetur adipisicing elit.">
           <img src="img/cases/counsil10.jpg" alt="">
+          </a>
+          <a 
+          href="img/cases/counsil6.jpg" data-lightbox="cases"
+          data-title="Lorem ipsum dolor, sit amet consectetur adipisicing elit.">
           <img src="img/cases/counsil6.jpg" alt="">
+          </a>
         </div>
       </div>
     </section>
@@ -123,11 +164,13 @@
           <div class="column-2 bg-secondary">
             <h4>May 16, 2021</h4>
             <h2>Blog Post One</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam quaerat culpa ipsum similique provident enim in rem deleniti dolor minima cum accusamus sapiente vero, expedita ea optio harum ipsam doloremque?</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam quaerat culpa ipsum similique provident
+              enim in rem deleniti dolor minima cum accusamus sapiente vero, expedita ea optio harum ipsam doloremque?
+            </p>
             <a href="blog.html" class="btn btn-outline">
               <i class="fas fa-chevron-right"></i>
               Read My Post
-            </a> 
+            </a>
           </div>
         </div>
       </div>
@@ -140,16 +183,16 @@
         <h2>Telehealth Locations</h2>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque, ea!</p>
       </header>
-        <div class="flex-items">
-          <div>
-            <img src="img/home/longhorn.jpg" alt="TX">
-            <h4>Texas</h4>
-          </div>
-          <div>
-            <img src="img/team/ca.jpg" alt="CA">
-            <h4>California</h4>
-          </div>
+      <div class="flex-items">
+        <div>
+          <img src="img/home/longhorn.jpg" alt="TX">
+          <h4>Texas</h4>
         </div>
+        <div>
+          <img src="img/team/ca.jpg" alt="CA">
+          <h4>California</h4>
+        </div>
+      </div>
     </section>
 
     <!-- Contact -->
@@ -163,7 +206,7 @@
         <div class="column">
           <div class="column-2 bg-primary">
             <h2>Request Consult</h2>
-            <form action="" class="callback-form">
+            <form action="process.php" method="POST" class="callback-form">
               <div class="form-control">
                 <label for="name"></label>
                 <input type="text" name="name" id="name" placeholder="First Last">Name
@@ -192,21 +235,47 @@
     </div>
     <p>Copyright &copy; 2020- Christina Ramirez MFT PLLC</p>
   </footer>
+  
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
+  <script src="JS/lightbox.min.js"></script>
   <script>
     const navbar = document.getElementById('navbar');
     let scrolled = false;
-    
-    window.onscroll = funtion(); { 
-      if(window.pageYOffset > 70) {
-        navbar.classlist.remove('top');
-        if(!scrolled) {
-          navbar.style.transform = 'TranslateY(-70px)';
+
+    window.onscroll = function () {
+      if (window.pageYOffset > 100) {
+        navbar.classList.remove('top');
+        if (!scrolled) {
+          navbar.style.transform = 'translateY(0px)';
         }
+        setTimout(function () {
+          navbar.style.transform = 'translateY(0px)';
+          scrolled = true;
+        }, 200);
       } else {
-        navbar.classlist.add('top');
+        navbar.classList.add('top');
+        scrolled = false;
       }
     };
+
+    // Smooth Scrolling
+    $('#navbar a, .btn').on('click', function (e) {
+      if (this.hash !== '') {
+        e.preventDefault();
+
+        const hash = this.hash;
+
+        $('html, body').animate(
+          {
+            scrollTop: $(hash).offset().top - 100,
+          },
+          800
+        );
+      }
+    });
   </script>
 </body>
+
 </html>
