--- a/ChristinaWebsite/success.html
+++ b/ChristinaWebsite/success.html
@@ -5,34 +5,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/utilities.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/mobile.css">
   <link rel="stylesheet" media="screen and (min-width: 1100px)" href="css/widescreen.css">
-  <title>EdgeLedger Financial | Accounting & Investment</title>
+  <title>Christina Ramirez MFT, PLLC</title>
 </head>
 <body>
   <!-- Navbar -->
-  <nav id="navbar">
+  <nav id="navbar-2">
     <h1 class="logo">
-      <span class="text-primary">
-        <i class="fas fa-book-open"></i> Edge</span>Ledger
+        <div class="container-title"><span class="text-primary          company-title"><img class="img-1"
+          src="img/home/logolotus7.png" alt=""></img>Christina Ramirez </span><span class="company-title-2">
+          MFT</span>
+        </div>    
     </h1>
   </nav>
 
-  <section id="success" class="bg-primary py-3 text-center">
-      <div class="container">
-          <h1 class="l-heading">Thank You For Your Submission</h2>
-            <p class="lead">We will get back to you soon</p>
-            <a href="/index.html">Go Back</a>
-      </div>
+  <header class="section-header bg-primary">
+    <h2>Thank You For Your Submission</h2>
+    <h4>I will get back to you soon</h4>
+    <br><br><a href="/index.html">Go Back</a>
+  </header>
   </section>
 
 
   <!-- Footer -->
-  <footer id="main-footer" class="bg-dark text-center py-1">
-    <div class="container">
-      <p>Copyright &copy; 2019, EdgeLedger, All Rights Reserved</p>
+  <footer class="footer bg-dark">
+    <div class="social">
+      <a href="a"><i class="fab fa-facebook fa-2x"></i></a>
+      <a href="a"><i class="fab fa-linkedin fa-2x"></i></a>
+      <a href="a"><i class="fab fa-instagram fa-2x"></i></a>
     </div>
+    <p>Copyright &copy; 2020- Christina Ramirez MFT PLLC</p>
   </footer>
 </body>
 </html>
