--- a/ChristinaWebsite/blog.html
+++ b/ChristinaWebsite/blog.html
@@ -65,7 +65,7 @@
       <div class="row">
         <div class="column">
           <div class="column-1">
-            <img src="img/cases/counsil12.jpg" alt="">
+            <img src="img/blog/blog14.jpg" alt="">
           </div>
         </div>
         <div class="column">
